<?xml version="1.0" encoding="utf-8"?>


<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:tag="button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:backgroundTint="?attr/colorOnPrimary"
        app:tint="?attr/colorPrimary"
        android:contentDescription="@string/remove_row_button"
        android:src="@android:drawable/ic_delete" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:tag="ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_padding"
            android:backgroundTint="?attr/colorOnPrimary"
            android:hint="@string/ssid_hint"
            android:textColorHint="?attr/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:tag="url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_padding"
            android:backgroundTint="?attr/colorOnPrimary"
            android:hint="@string/http_hint"
            android:inputType="text"
            android:textColorHint="?attr/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>
</TableRow>