<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:text="@string/general_settings" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/enable_app_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingStart="@dimen/normal_padding"
                android:paddingTop="@dimen/normal_padding"
                android:paddingBottom="@dimen/normal_padding"
                android:text="@string/enable_assistant"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/enable_notification_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingStart="@dimen/normal_padding"
                android:paddingTop="@dimen/normal_padding"
                android:paddingBottom="@dimen/normal_padding"
                android:text="@string/enable_notification_controls"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/charge_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/normal_padding"
                    android:paddingTop="@dimen/normal_padding"
                    android:paddingBottom="@dimen/normal_padding"
                    android:text="@string/target_battery_charge_level"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/charge_percent_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0"
                    android:background="@drawable/dashed_underline"
                    android:text="@string/change_target_battery_charge_level"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:text="@string/actions_on_charge" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="@color/white"
                        android:backgroundTintMode="multiply"
                        android:contentDescription="@string/edit_button_text"
                        android:padding="@dimen/normal_padding"
                        android:src="@drawable/ic_baseline_edit_24" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/normal_padding"
                        android:paddingTop="@dimen/normal_padding"
                        android:paddingBottom="@dimen/normal_padding"
                        android:text="@string/action_reminder"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/textView3"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/normal_padding"
                        android:paddingTop="@dimen/normal_padding"
                        android:paddingBottom="@dimen/normal_padding"
                        android:text="@string/action_alarm"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="@color/white"
                        android:backgroundTintMode="multiply"
                        android:contentDescription="@string/edit_button_text"
                        android:padding="@dimen/normal_padding"
                        android:src="@drawable/ic_baseline_edit_24" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/normal_padding"
                        android:paddingTop="@dimen/normal_padding"
                        android:paddingBottom="@dimen/normal_padding"
                        android:text="@string/action_http_request"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>