<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.AlarmSettingsFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_padding"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/enable_vibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:theme="@style/Theme.Sparki.Switch"
                    android:text="@string/vibrate"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/alarm_ignores_silent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:theme="@style/Theme.Sparki.Switch"
                    android:text="@string/ignore_silent"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="500dp"
                android:padding="@dimen/normal_padding"
                android:text="@string/alarm_timeout_explainer"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/picker_container"
                    android:text="@string/timeout_after"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorOnSecondary" />

                <LinearLayout
                    android:id="@+id/picker_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:id="@+id/interval_picker_tens"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.Sparki.NumberPicker"

                        android:layout_marginStart="@dimen/normal_padding"
                        android:layout_marginTop="@dimen/normal_padding"
                        android:layout_marginBottom="@dimen/normal_padding" />

                    <NumberPicker
                        android:id="@+id/interval_picker_ones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.Sparki.NumberPicker"

                        android:layout_marginTop="@dimen/normal_padding"
                        android:layout_marginEnd="@dimen/normal_padding"
                        android:layout_marginBottom="@dimen/normal_padding" />
                </LinearLayout>

                <!-- TODO one and many -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"

                    android:layout_toEndOf="@+id/picker_container"
                    android:gravity="center"
                    android:text="@string/minutes"
                    android:textColor="?attr/colorOnSecondary" />
            </RelativeLayout>

        </LinearLayout>

</ScrollView>